[ADD] game viewport

--- a/WaldemEngine/imgui.ini
+++ b/WaldemEngine/imgui.ini
@@ -9,8 +9,8 @@ Size=340,182
 Collapsed=0
 
 [Window][Entities]
-Pos=0,17
-Size=383,1063
+Pos=0,21
+Size=383,1059
 Collapsed=0
 DockId=0x00000001,0
 
@@ -21,14 +21,14 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Details]
-Pos=1536,17
-Size=384,1063
+Pos=1536,21
+Size=384,1059
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][MainDockspaceHost]
-Pos=0,17
-Size=1920,1063
+Pos=0,21
+Size=1920,1059
 Collapsed=0
 
 [Window][MenuBar]
@@ -37,10 +37,27 @@ Size=394,421
 Collapsed=0
 
 [Window][Viewport]
-Pos=385,17
-Size=1149,791
+Pos=385,21
+Size=1149,787
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000007
+
+[Window][Editor Viewport]
+Pos=385,21
+Size=1149,787
+Collapsed=0
+
+[Window][Editor]
+Pos=385,21
+Size=730,787
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Game]
+Pos=1117,21
+Size=417,787
+Collapsed=0
+DockId=0x00000008,0
 
 [Table][0x8759DA7C,2]
 Column 0  Weight=41.3245
@@ -55,11 +72,13 @@ Column 0  Weight=144.4445
 Column 1  Weight=115.5556
 
 [Docking][Data]
-DockSpace       ID=0xC6648C19 Window=0xE5A44030 Pos=100,117 Size=1920,1063 Split=X
-  DockNode      ID=0x00000001 Parent=0xC6648C19 SizeRef=383,1080 Selected=0x66870828
-  DockNode      ID=0x00000002 Parent=0xC6648C19 SizeRef=1535,1080 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1149,1080 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1149,808 CentralNode=1 Selected=0xC450F867
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1149,270 Selected=0xE24ED91D
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=384,1080 Selected=0x893C342E
+DockSpace         ID=0xC6648C19 Window=0xE5A44030 Pos=100,121 Size=1920,1059 Split=X
+  DockNode        ID=0x00000001 Parent=0xC6648C19 SizeRef=383,1080 Selected=0x66870828
+  DockNode        ID=0x00000002 Parent=0xC6648C19 SizeRef=1535,1080 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1149,1080 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1149,808 Split=X Selected=0xDF0EC458
+        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=730,787 CentralNode=1 Selected=0xDF0EC458
+        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=417,787 Selected=0xD1EB2482
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=1149,270 Selected=0xE24ED91D
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=384,1080 Selected=0x893C342E
 
