[ADD] gizmos for camera and lights

--- a/WaldemEngine/imgui.ini
+++ b/WaldemEngine/imgui.ini
@@ -40,7 +40,6 @@ Collapsed=0
 Pos=385,21
 Size=1149,787
 Collapsed=0
-DockId=0x00000007
 
 [Window][Editor Viewport]
 Pos=385,21
@@ -49,13 +48,13 @@ Collapsed=0
 
 [Window][Editor]
 Pos=385,21
-Size=730,787
+Size=573,787
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Game]
-Pos=1117,21
-Size=417,787
+Pos=960,21
+Size=574,787
 Collapsed=0
 DockId=0x00000008,0
 
@@ -76,9 +75,9 @@ DockSpace         ID=0xC6648C19 Window=0xE5A44030 Pos=100,121 Size=1920,1059 Spl
   DockNode        ID=0x00000001 Parent=0xC6648C19 SizeRef=383,1080 Selected=0x66870828
   DockNode        ID=0x00000002 Parent=0xC6648C19 SizeRef=1535,1080 Split=X
     DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1149,1080 Split=Y
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1149,808 Split=X Selected=0xDF0EC458
-        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=730,787 CentralNode=1 Selected=0xDF0EC458
-        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=417,787 Selected=0xD1EB2482
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1149,808 Split=X
+        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=573,808 Selected=0xDF0EC458
+        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=574,808 CentralNode=1 Selected=0xD1EB2482
       DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=1149,270 Selected=0xE24ED91D
     DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=384,1080 Selected=0x893C342E
 
