--- a/Content/Scenes/imgui.ini
+++ b/Content/Scenes/imgui.ini
@@ -15,8 +15,8 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Content]
-Pos=385,785
-Size=1149,295
+Pos=385,810
+Size=1149,270
 Collapsed=0
 DockId=0x00000006,0
 
@@ -40,7 +40,6 @@ Collapsed=0
 Pos=385,21
 Size=1149,787
 Collapsed=0
-DockId=0x00000005
 
 [Window][Editor Viewport]
 Pos=385,21
@@ -49,15 +48,15 @@ Collapsed=0
 
 [Window][Editor]
 Pos=385,21
-Size=1149,762
+Size=573,787
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000007,0
 
 [Window][Game]
-ViewportPos=2743,137
-ViewportId=0x6D36DD32
-Size=1195,889
+Pos=960,21
+Size=574,787
 Collapsed=0
+DockId=0x00000008,0
 
 [Table][0x8759DA7C,2]
 Column 0  Weight=41.3245
@@ -72,11 +71,13 @@ Column 0  Weight=144.4445
 Column 1  Weight=115.5556
 
 [Docking][Data]
-DockSpace       ID=0xC6648C19 Window=0xE5A44030 Pos=100,121 Size=1920,1059 Split=X
-  DockNode      ID=0x00000001 Parent=0xC6648C19 SizeRef=383,1080 Selected=0x66870828
-  DockNode      ID=0x00000002 Parent=0xC6648C19 SizeRef=1535,1080 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1149,1080 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1149,762 CentralNode=1 Selected=0xDF0EC458
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1149,295 Selected=0xE24ED91D
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=384,1080 Selected=0x893C342E
+DockSpace         ID=0xC6648C19 Window=0xE5A44030 Pos=100,121 Size=1920,1059 Split=X
+  DockNode        ID=0x00000001 Parent=0xC6648C19 SizeRef=383,1080 Selected=0x66870828
+  DockNode        ID=0x00000002 Parent=0xC6648C19 SizeRef=1535,1080 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1149,1080 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1149,808 Split=X
+        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=573,808 Selected=0xDF0EC458
+        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=574,808 CentralNode=1 Selected=0xD1EB2482
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=1149,270 Selected=0xE24ED91D
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=384,1080 Selected=0x893C342E
 
