[UPD] UI appearance update [ADD] shortcuts setting menu [ADD] Undo/Redo [ADD] new scene [ADD] renaming with F2

--- a/Content/Scenes/imgui.ini
+++ b/Content/Scenes/imgui.ini
@@ -1,36 +1,36 @@
 [Window][Entities]
-Pos=0,21
-Size=383,1059
+Pos=0,27
+Size=222,982
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Details]
-Pos=1394,21
-Size=675,1059
+Pos=1536,27
+Size=384,982
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Content]
-Pos=385,810
-Size=1007,270
+Pos=224,739
+Size=1310,270
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Editor]
-Pos=385,21
-Size=1007,787
+Pos=224,27
+Size=1310,710
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Game]
-Pos=385,21
-Size=1007,787
+ViewportPos=2092,125
+ViewportId=0x6D36DD32
+Size=1534,710
 Collapsed=0
-DockId=0x00000005,1
 
 [Window][MainDockspaceHost]
-Pos=0,21
-Size=2069,1059
+Pos=0,27
+Size=1920,982
 Collapsed=0
 
 [Window][Debug##Default]
@@ -39,11 +39,11 @@ Size=400,400
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0xC6648C19 Window=0xE5A44030 Pos=100,121 Size=2069,1059 Split=X
-  DockNode      ID=0x00000001 Parent=0xC6648C19 SizeRef=383,1080 Selected=0x66870828
-  DockNode      ID=0x00000002 Parent=0xC6648C19 SizeRef=1535,1080 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1007,1080 Split=Y
+DockSpace       ID=0xC6648C19 Window=0xE5A44030 Pos=0,50 Size=1920,982 Split=X
+  DockNode      ID=0x00000001 Parent=0xC6648C19 SizeRef=222,982 Selected=0x66870828
+  DockNode      ID=0x00000002 Parent=0xC6648C19 SizeRef=1696,982 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1307,1080 Split=Y
       DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1149,808 CentralNode=1 Selected=0xDF0EC458
       DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1149,270 Selected=0xE24ED91D
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=675,1080 Selected=0x893C342E
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=384,1080 Selected=0x893C342E
 
