[ADD] material inspector [UPD] new image

--- a/Content/Scenes/imgui.ini
+++ b/Content/Scenes/imgui.ini
@@ -1,32 +1,32 @@
 [Window][Entities]
 Pos=0,27
-Size=222,982
+Size=171,982
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Details]
 Pos=1536,27
-Size=384,982
+Size=384,493
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000007,0
 
 [Window][Content]
-Pos=224,739
-Size=1310,270
+Pos=173,745
+Size=1361,264
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Editor]
-Pos=224,27
-Size=1310,710
+Pos=173,27
+Size=725,716
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000009,0
 
 [Window][Game]
-ViewportPos=2092,125
-ViewportId=0x6D36DD32
-Size=1534,710
+Pos=900,27
+Size=634,716
 Collapsed=0
+DockId=0x0000000A,0
 
 [Window][MainDockspaceHost]
 Pos=0,27
@@ -38,12 +38,22 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Material Inspector]
+Pos=1536,522
+Size=384,487
+Collapsed=0
+DockId=0x00000008,0
+
 [Docking][Data]
-DockSpace       ID=0xC6648C19 Window=0xE5A44030 Pos=0,50 Size=1920,982 Split=X
-  DockNode      ID=0x00000001 Parent=0xC6648C19 SizeRef=222,982 Selected=0x66870828
-  DockNode      ID=0x00000002 Parent=0xC6648C19 SizeRef=1696,982 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1307,1080 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1149,808 CentralNode=1 Selected=0xDF0EC458
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1149,270 Selected=0xE24ED91D
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=384,1080 Selected=0x893C342E
+DockSpace         ID=0xC6648C19 Window=0xE5A44030 Pos=0,50 Size=1920,982 Split=X
+  DockNode        ID=0x00000001 Parent=0xC6648C19 SizeRef=171,1080 Selected=0x66870828
+  DockNode        ID=0x00000002 Parent=0xC6648C19 SizeRef=1747,1080 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1361,1080 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1149,716 Split=X Selected=0xDF0EC458
+        DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=725,716 CentralNode=1 Selected=0xDF0EC458
+        DockNode  ID=0x0000000A Parent=0x00000005 SizeRef=634,716 Selected=0xD1EB2482
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=1149,264 Selected=0xE24ED91D
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=384,1080 Split=Y Selected=0x893C342E
+      DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=384,493 Selected=0x893C342E
+      DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=384,487 Selected=0x5C09F1C9
 
