--- a/Content/Scenes/imgui.ini
+++ b/Content/Scenes/imgui.ini
@@ -1,36 +1,36 @@
 [Window][Entities]
 Pos=0,27
-Size=383,1053
+Size=383,1342
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Details]
-Pos=1536,27
-Size=384,1053
+Pos=2176,27
+Size=384,673
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000007,0
 
 [Window][Content]
-Pos=385,810
-Size=1149,270
+Pos=385,1099
+Size=1789,270
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Editor]
 Pos=385,27
-Size=1149,781
+Size=1789,1070
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Game]
 Pos=385,27
-Size=1149,781
+Size=1789,1070
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][MainDockspaceHost]
 Pos=0,27
-Size=1920,1053
+Size=2560,1342
 Collapsed=0
 
 [Window][Debug##Default]
@@ -39,22 +39,19 @@ Size=400,400
 Collapsed=0
 
 [Window][Material Inspector]
-Pos=1536,27
-Size=384,1053
+Pos=2176,702
+Size=384,667
 Collapsed=0
-DockId=0x00000004,1
-
-[Window][RenameAssetOrFolderPopup]
-Pos=790,425
-Size=339,159
-Collapsed=0
+DockId=0x00000008,0
 
 [Docking][Data]
-DockSpace       ID=0xC6648C19 Window=0xE5A44030 Pos=100,127 Size=1920,1053 Split=X
+DockSpace       ID=0xC6648C19 Window=0xE5A44030 Pos=0,50 Size=2560,1342 Split=X
   DockNode      ID=0x00000001 Parent=0xC6648C19 SizeRef=383,1080 Selected=0x66870828
   DockNode      ID=0x00000002 Parent=0xC6648C19 SizeRef=1535,1080 Split=X
     DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1149,1080 Split=Y
       DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1149,808 CentralNode=1 Selected=0xDF0EC458
       DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1149,270 Selected=0xE24ED91D
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=384,1080 Selected=0x893C342E
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=384,1080 Split=Y Selected=0x893C342E
+      DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=384,673 Selected=0x893C342E
+      DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=384,667 Selected=0x5C09F1C9
 
